@@ -1,3 +1,12 @@
+2005-05-24  Vincent Noel  <vnoel@cox.net>
+
+	* logview-findbar.c: (logview_findbar_clicked_cb),
+	(logview_findbar_hide), (logview_findbar_new):
+	* logview-findbar.h:
+	* logview.c: (CreateMainWin):
+	* logview.h: Make the find toolbar same as the one in evince. No
+	more "close" button, just hide it on focus-out.
+
 2005-05-19  Vincent Noel  <vnoel@cox.net>
 
 	* logview.c: (logview_select_log), (loglist_create),
